--- a/Style.css
+++ b/Style.css
@@ -1,19 +1,21 @@
-@import url('https://fonts.googleapis.com/Css2?familia=Chakra+petch:wght@400;700&display=swap');
-:root {
-    --cor-de-fundo: #1e1e1e;
-    --verde: #6fff57;
+@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..600&family=Share+Tech+Mono&display=swap');
+
+:root{
+    --cor-de-fundo: #1E1E1E;
+    --rosa: #FF00C7;
     --branco: #FFFFFF;
-    --botao-ativo: #3a375e;
-    --botao-inativo: rgba(58, 55, 94, 0.5);
+    --botao-ativo: #3A375E;
+    --botao-inativo: rgba(0, 40, 69, 0.8);
     --texto-fundo: rgba(58, 55, 94, 0.3);
 }
-body {
+
+body{
     background-color: var(--cor-de-fundo);
     color: var(--branco);
-    font-family: 'Chakra Petch', sans-serif;
+    font-family: 'Kode Mono', sans-serif;
 }
 
-.conteudo-principal {
+.conteudo-principal{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -21,4 +23,70 @@ body {
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
+}
+
+.titulo-principal{
+    text-align: left;
+    width: 100%;
+    font-size: 32px;
+}
+
+.titulo-principal span{
+    color: var(--rosa);
+}
+
+.botao{
+    font-family: "Kode Mono", sans-serif;
+    background-color: var(--botao-inativo);
+    color: var(--branco);
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    font-size: 18px;
+    align-items: center;
+    width: 100%;
+    border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
+    border-top: none;
+}
+
+.botao:first-child{
+    border-radius: 40px 40px 0 0;
+}
+
+.botoes{
+    display: block;
+}
+
+.botao.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--rosa);
+}
+
+.abas-textos{
+    background-color: var(--texto-fundo);
+    padding: 40px ;
+    border-radius: 0 0 40px 40px;
+}
+
+.aba-conteudo.ativo{
+    display:block;
+}
+
+.aba-conteudo{
+    display: none;
+}
+
+@media screen and (min-width: 768px) {
+    .botoes{
+        display: flex;
+    }
+    .botao:first-child{
+        border-radius: 40px 0 0 0;
+    }
+    .botao:last-child{
+        border-radius: 0 40px 0 0;
+    }
+    
 }
