--- a/Style.css
+++ b/Style.css
@@ -2,7 +2,7 @@
 
 :root{
     --cor-de-fundo: #1E1E1E;
-    --rosa: #FF00C7;
+    --rosa: #00FF7F;
     --branco: #FFFFFF;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(0, 40, 69, 0.8);
